# CAE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY  pyproject.toml  requirements.txt  tutorial.ipynb
.github/workflows/: ci.yml  publish.yml
causal_abstraction/: __init__.py  analytical_metrics.py  config.py  engine.py  experiment.py  metrics.py  paths.py  primitives.py  sampling.py  schema.py  tasks.py  valuemap.py
causal_abstraction/models/: __init__.py  high_level.py  low_level.py  neural.py
causal_abstraction/spaces/: __init__.py  base.py
systems/: 01_logic_circuit.py  02_transistor_circuit.py  03_gas_simulation.py  04_predator_prey.py  05_heat_equation.py  06_heat_equation_2d.py  07_ising_model.py  08_tracr.py  10_cpu_6502.py  11_controlled_experiments.py
systems/09_grn/: grn.py
systems/10_cpu_6502_libs/: README.md  build_libs.sh  gate.version  gate_bridge.cpp  isa.version  isa_bridge.c  transistor.version  transistor_bridge.c
test/: 01_logic_circuit.py  02_transistor_circuit.py  03_gas_simulation.py  04_predator_prey.py  05_heat_equation.py  06_heat_equation_2d.py  07_ising_model.py  08_tracr.py  09_grn.py  10_cpu_6502.py  11_controlled_experiments.py  conftest.py  power_01_logic_circuit.py  power_02_transistor_circuit.py  power_03_gas_simulation.py  power_04_predator_prey.py  power_05_heat_equation.py  power_06_heat_equation_2d.py  power_07_ising_model.py  power_08_tracr.py  power_09_grn.py  power_10_cpu_6502.py  power_11_controlled.py  power_runner.py  run_power.py  runner.py  test_analytical_metrics.py  test_engine.py  test_metrics.py  test_paths.py  test_samplers.py  test_stochastic_hlm.py  test_validators.py  tracr_size.py  utils.py
